# fastapi_blog

./: .gitignore  Dockerfile  auth.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  notes.txt  populate_db.py  pyproject.toml  schemas.py  snippets.txt  vps_setup.txt
alembic/: env.py
alembic/versions/: 45d2cf43fc8b_initial_schema.py  f268e32c8875_i_add_likes_to_post.py
routers/: __init__.py  posts.py  users.py
static/js/: auth.js
templates/: account.html  forgot_password.html  home.html  home_finished.html  initial_layout  intial_home  layout.html  login.html  post.html  register.html  reset_password.html  user_posts.html
templates/email/: password_reset.html
tests/: conftest.py  test_demo.py  test_posts.py  test_users.py
