[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.2",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "boto3>=1.43.46",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "moto[s3]>=5.2.2",
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
